# decloneify-old

./: .dockerignore  Cargo.toml  Dockerfile  trackmap.toml
src/: main.rs  playlist.rs  token.rs  trackmap.rs
src/spotify/: client.rs  mod.rs  track.rs
