[package]
name = "decloneify"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Subašić <antonio@subasic.me>"]
description = "a simple Spotify duplicate-tracks removal tool"
repository = "https://github.com/antoniosubasic/decloneify"
license-file = "LICENSE"
keywords = ["spotify", "duplicate", "tracks", "removal", "tool", "rust", "cli"]

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json", "cookies"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
toml = "0.8.19"
