[package]
name = "decloneify"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Subašić <antonio@subasic.me>"]
description = "a simple Spotify duplicate-tracks removal tool"
repository = "https://github.com/antoniosubasic/decloneify"
license-file = "LICENSE"
keywords = ["spotify", "duplicate", "tracks", "removal", "tool", "rust", "cli"]

[dependencies]
dotenv = "^0.15"
reqwest = { version = "^0.12", features = ["json", "cookies"] }
tokio = { version = "^1.41", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = "^0.4"
toml = "^0.8"
colored = "^2.1"
